sonarr/sonarr.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "media"
  name: "sonarr-ingress"
spec:
  rules:
  - host: "sonarr.k3s.securait.local"
    http:
      paths:
        - backend:
            service:
              name: "sonarr"
              port:
                number: 80
          path: "/"
          pathType: Prefix
  tls:
  - hosts:
    - sonarr.k3s.securait.local
